test/types/string/diten/substringOutOfBounds.good
substringOutOfBounds.chpl:3: error: String access out-of-bounds
