test/types/string/diten/substringOutOfBounds.future
error message: Runtime error doesn't include line number information
